--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/logo.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Quote App</title>
 </head>
 <body>
+  <section class="container">
+  </section>
 </body>
 </html>
