--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/logo.png">
   <link rel="stylesheet" href="style.css">
   
+  <script type="module" defer src="src/js/model.js"></script>
+
   <title>Quote App</title>
 </head>
 <body>
