--- a/index.html
+++ b/index.html
@@ -7,12 +7,11 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./src/images/logo.png">
   <link rel="stylesheet" href="style.css">
   
-  <script type="module" defer src="src/js/model.js"></script>
+  <script type="module" defer src="src/js/controller.js"></script>
 
   <title>Quote App</title>
 </head>
 <body>
-  <!-- https://api.adviceslip.com -->
   <section class="container">
   </section>
 </body>
